@@ -35,13 +35,13 @@ import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
-import org.mockito.runners.MockitoJUnitRunner;
+import org.mockito.junit.MockitoJUnitRunner;
 
 import java.util.ArrayList;
 import java.util.List;
 
 import static org.junit.Assert.fail;
-import static org.mockito.Matchers.any;
+import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.when;
 
 @RunWith(MockitoJUnitRunner.class)
@@ -56,12 +56,14 @@ public class VirtualMachineMOTest {
 
     VirtualMachineMO vmMo;
 
+    AutoCloseable closeable;
+
     private List<VirtualDevice> getVirtualScSiDeviceList(Class<?> cls) {
 
         List<VirtualDevice> deviceList = new ArrayList<>();
         try {
 
-            VirtualSCSIController scsiController = (VirtualSCSIController)cls.newInstance();
+            VirtualSCSIController scsiController = (VirtualSCSIController)cls.getDeclaredConstructor().newInstance();
             scsiController.setSharedBus(VirtualSCSISharing.NO_SHARING);
             scsiController.setBusNumber(0);
             scsiController.setKey(1);
@@ -76,7 +78,7 @@ public class VirtualMachineMOTest {
 
     @Before
     public void setup() {
-        MockitoAnnotations.initMocks(this);
+        closeable = MockitoAnnotations.openMocks(this);
         vmMo = new VirtualMachineMO(context, mor);
         when(context.getVimClient()).thenReturn(client);
     }
@@ -89,12 +91,9 @@ public class VirtualMachineMOTest {
     public static void tearDownAfterClass() throws Exception {
     }
 
-    @Before
-    public void setUp() throws Exception {
-    }
-
     @After
     public void tearDown() throws Exception {
+        closeable.close();
     }
 
     @Test
